Break out some js to a sepate file with classes

--- a/web/templates/chat/page.html
+++ b/web/templates/chat/page.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block head %}
+    <script type="text/javascript" src="/chat/static/data.js"></script>
+
+{% endblock %}
+
 {% block header %}
   <h1>{% block title %}View{% endblock %}</h1>
 {% endblock %}
@@ -20,84 +25,6 @@
 
 {% block end %}
 <script>
-
-class JSONHandler
-{
-
-constructor(address="/api")
-{
-	this.address = address;
-}
-
-post(data=null)
-{
-    return fetch(this.address, {
-          method: 'post',
-          headers: {
-              "Content-Type": "application/json",
-              'Accept':'application/json'
-          },
-          body: JSON.stringify(data),
-    });
-}
-
-
-}
-
-
-class WebSocketHandler
-{
-
-constructor(address="ws://localhost:5000/ws")
-{
-	this.address = address;
-    this.uuid=null;
-	this.ws = new WebSocket("ws://localhost:5000/chat/ws");
-
-    this.ws.addEventListener("close", (event) => {
-      this.websocket_close(event);
-    });
-
-    this.ws.addEventListener("open", (event) => {
-        this.sendEvent("open");
-    });
-
-    this.ws.addEventListener("message",  (event) => {
-      this.listener_message(event);
-    });
-
-}
-
-listener_message(event)
-{
-    try {
-        var data = JSON.parse(event.data);
-        if( data.event && data.event == "new_uuid")
-        {
-            this.uuid=data.uuid;
-            console.log("uuid: "+ data.uuid);
-        }else if(data.event){
-            this.websocket_message(data);
-        }
-    } catch (error) {
-        alert("Message from server "+ event.data);
-    }
-}
-
-websocket_message(data)
-{
-
-}
-
-sendEvent(event_name,data=null)
-{
-    this.ws.send(JSON.stringify({"event":event_name,"data":data}));
-}
-websocket_close(event){
-    console.log("WebSocket Closed");
-}
-
-}
 
 
 class WebSocketCustom extends WebSocketHandler
